--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@ members.forEach((m)=>{
 const links = [
   {title:'Bài 7', href:'https://nt4620567-byte.github.io/BAI7/'},
   {title:'Bài 8', href:'https://dangthunguyenhuynh43-ui.github.io/BAI8/'},
-  {title:'Bài 9', href:'#'},
-  {title:'Bài 10', href:'#'},
-  {title:'Bài 11', href:'#'},
-  {title:'Bài 12', href:'#'}
+  {title:'Bài 9', href:'https://nguyenhuynhngocchau2508-ops.github.io/tin-9/'},
+  {title:'Bài 10', href:'https://nt4620567-byte.github.io/Baitin_12v/'},
+  {title:'Bài 11', href:'https://queanh1101.github.io/Bai11.github.io/'},
+  {title:'Bài 12', href:'https://doquocviet52.github.io/TInHocBai12/'}
 ];
 const linksEl = document.getElementById('links');
 const navLinksEl = document.getElementById('navLinks');
