--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       </p>
 
       <p><strong>Email:</strong> 
-        <a href="nhom4.12v@gmail.com">example@gmail.com</a>
+        <a href="nhom4.12v@gmail.com">nhom4.12v@gmail.com</a>
       </p>
     </div>
   </footer>
