--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
@@ -254,7 +253,7 @@
       </p>
 
       <p><strong>Email:</strong> 
-        <a href="nhom4.12v@gmail.com">nhom4.12v@gmail.com</a>
+         <a href="mailto:nhom4.12v@gmail.com">nhom4.12v@gmail.com</a>
       </p>
     </div>
   </footer>
