--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ members.forEach(m=>{
 const links=[
   {title:'Bài 7: HTML và cấu trúc trang web', href:'https://nt4620567-byte.github.io/BAI7/'},
   {title:'Bài 8: Định dạng văn bản', href:'https://dangthunguyenhuynh43-ui.github.io/BAI8/'},
-  {title:'Bài 9: Tạo danh sách, bảng', href:'https://nguyenhuynhngocchau2508-ops.github.io/tin-9/'},
+  {title:'Bài 9: Tạo danh sách, bảng', href:'https://nguyenhuynhngocchau2508-ops.github.io/tin9.html/'},
   {title:'Bài 10: Tạo liên kết', href:'https://nt4620567-byte.github.io/Baitin_12v/'},
   {title:'Bài 11: Chèn tệp đa phương tiện', href:'https://queanh1101.github.io/Bai11.github.io/'},
   {title:'Bài 12: Tạo biểu mẫu', href:'https://doquocviet52.github.io/TInHocBai12/'},
