--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ const members=[
   {name:'Nguyễn Huỳnh Đăng Thư', cls:'12 Văn', about:'Tổng hợp nội dung, luôn chill 😎', photo:'Đăng Thư.png', link:'https://dangthunguyenhuynh43-ui.github.io/-thuw/#'},
   {name:'Trần Lê Yến Như', cls:'12 Văn', about:'Mang vibe riêng đầy năng lượng ✨', photo:'Yến Như.png', link:'https://nt4620567-byte.github.io/Nhu/'},
   {name:'Nguyễn Phạm Quế Anh', cls:'12 Văn', about:'Thiết kế slide & hình ảnh 🎨', photo:'Quế Anh.png', link:'https://queanh1101.github.io/'},
-  {name:'Nguyễn Huỳnh Ngọc Châu', cls:'12 Văn', about:'Kiểm tra bài 📝', photo:'Ngọc Châu.png', link:'https://nguyenhuynhngocchau2508-ops.github.io/tin9.html/'},
+  {name:'Nguyễn Huỳnh Ngọc Châu', cls:'12 Văn', about:'Kiểm tra bài 📝', photo:'Ngọc Châu.png', link:'https://nt4620567-byte.github.io/Ch-u-/'},
   {name:'Đỗ Quốc Việt', cls:'12 Văn', about:'Tổng hợp tài liệu 💻', photo:'QV.jpg', link:'https://doquocviet52.github.io/doquocvietprofile.github.io/'}
 ];
 members.forEach(m=>{
