--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@ const links=[
   {title:'Bài 10: Tạo liên kết', href:'https://nt4620567-byte.github.io/Baitin_12v/'},
   {title:'Bài 11: Chèn tệp đa phương tiện', href:'https://queanh1101.github.io/Bai11.github.io/'},
   {title:'Bài 12: Tạo biểu mẫu', href:'https://doquocviet52.github.io/TInHocBai12/'},
-  {title:'Bài 13: Khái niệm, vai trò của CSS', href:''},
-  {title:'Bài 14: Định dạng văn bản bằng CSS', href:''}
+  {title:'Bài 13: Khái niệm, vai trò của CSS', href:'https://nt4620567-byte.github.io/Bai14tin/'},
+  {title:'Bài 14: Định dạng văn bản bằng CSS', href:'https://queanh1101.github.io/bai14.github.io/'}
 ];
 links.forEach(l=>{
   const a=document.createElement("a");
