Add new links to index.html

--- a/index.html
+++ b/index.html
@@ -290,7 +290,11 @@ const links=[
   {title:'Bài 11: Chèn tệp đa phương tiện', href:'https://queanh1101.github.io/Bai11.github.io/'},
   {title:'Bài 12: Tạo biểu mẫu', href:'https://doquocviet52.github.io/TInHocBai12/'},
   {title:'Bài 13: Khái niệm, vai trò của CSS', href:'https://nt4620567-byte.github.io/Bai14tin/'},
-  {title:'Bài 14: Định dạng văn bản bằng CSS', href:'https://queanh1101.github.io/bai14.github.io/'}
+  {title:'Bài 14: Định dạng văn bản bằng CSS', href:'https://queanh1101.github.io/bai14.github.io/'},
+  {title:'Bài 15: Tạo màu cho chữ và nền', href:'https://doquocviet52.github.io/tinhocbai15/'},
+  {title:'Bài 16: Định dạng khung', href:'https://nt4620567-byte.github.io/Tinbai16/'}, 
+  {title:'Bài 17: Các mức ưu tiên của bộ chọn', href:'https://queanh1101.github.io/Bai17.github.io/'},
+  {title:'Bài 18: Thực hành tổng hợp thiết kế trang web', href:'https://nguyenhuynhngocchau2508-ops.github.io/index.html/'}
 ];
 links.forEach(l=>{
   const a=document.createElement("a");
